<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.alexisjehan</groupId>
	<artifactId>mvn-check</artifactId>
	<version>2.3.0-SNAPSHOT</version>

	<name>MvnCheck</name>
	<description>A Java 17+ command line tool to check for artifact updates of Maven and Gradle projects.</description>
	<url>https://github.com/AlexisJehan/MvnCheck</url>
	<inceptionYear>2022</inceptionYear>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>Alexis Jehan</name>
		<url>https://github.com/AlexisJehan</url>
	</organization>
	<developers>
		<developer>
			<id>alexisjehan</id>
			<name>Alexis Jehan</name>
			<email>alexis.jehan@outlook.com</email>
			<organization>Alexis Jehan</organization>
			<organizationUrl>https://github.com/AlexisJehan</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:AlexisJehan/MvnCheck.git</connection>
		<developerConnection>scm:git:git@github.com:AlexisJehan/MvnCheck.git</developerConnection>
		<url>https://github.com/AlexisJehan/MvnCheck</url>
	</scm>
	<issueManagement>
		<system>GitHub Issues</system>
		<url>https://github.com/AlexisJehan/MvnCheck/issues</url>
	</issueManagement>
	<ciManagement>
		<system>GitHub Actions</system>
		<url>https://github.com/AlexisJehan/MvnCheck/actions</url>
	</ciManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.release>17</maven.compiler.release>
	</properties>

	<repositories>
		<repository>
			<id>gradle</id>
			<url>https://repo.gradle.org/gradle/libs-releases</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>jenkins</id>
			<url>https://repo.jenkins-ci.org/public</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.github.alexisjehan</groupId>
			<artifactId>javanilla</artifactId>
			<version>1.8.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-core</artifactId>
			<version>3.9.12</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-supplier</artifactId>
			<version>1.9.25</version> <!-- Based on "org.apache.maven:maven-core:3.9.12" -->
		</dependency>
		<dependency>
			<groupId>org.gradle</groupId>
			<artifactId>gradle-tooling-api</artifactId> <!-- From the "gradle" repository -->
			<version>9.2.1</version>
		</dependency>
		<dependency>
			<groupId>org.kohsuke</groupId>
			<artifactId>github-api</artifactId>
			<version>1.330</version>
		</dependency>
		<dependency>
			<groupId>com.infradna.tool</groupId>
			<artifactId>bridge-method-annotation</artifactId> <!-- From the "jenkins" repository -->
			<version>1.30</version> <!-- Based on "org.kohsuke:github-api:1.330" -->
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.spotbugs</groupId>
			<artifactId>spotbugs-annotations</artifactId>
			<version>4.8.6</version> <!-- Based on "org.kohsuke:github-api:1.330" -->
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.11.0</version>
		</dependency>
		<dependency>
			<groupId>org.jline</groupId>
			<artifactId>jansi</artifactId>
			<version>3.30.6</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.25.3</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.25.3</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-jul</artifactId>
			<version>2.25.3</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.25.3</version>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>6.0.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.27.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.21.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-junit-jupiter</artifactId>
			<version>5.21.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<directory>${project.basedir}</directory>
				<includes>
					<include>LICENSE.txt</include>
				</includes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
			<testResource>
				<directory>${project.basedir}</directory>
				<includes>
					<include>LICENSE.txt</include>
				</includes>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.9.0</version>
				<executions>
					<execution>
						<id>dependency-properties</id>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.1</version>
				<configuration>
					<showDeprecation>true</showDeprecation>
					<compilerArgs>
						<compilerArg>-Xlint:all</compilerArg>
					</compilerArgs>
					<proc>none</proc>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<!--suppress UnresolvedMavenProperty -->
					<argLine>${argLine} -javaagent:${org.mockito:mockito-core:jar} -Xshare:off</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.5.4</version>
				<configuration>
					<!--suppress UnresolvedMavenProperty -->
					<argLine>${argLine} -javaagent:${org.mockito:mockito-core:jar} -Xshare:off</argLine>
					<classesDirectory>${project.build.outputDirectory}</classesDirectory>
				</configuration>
				<executions>
					<execution>
						<id>failsafe-integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
					<execution>
						<id>failsafe-verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.14</version>
				<executions>
					<execution>
						<id>jacoco-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-report</id>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-prepare-agent-integration</id>
						<goals>
							<goal>prepare-agent-integration</goal>
						</goals>
					</execution>
					<execution>
						<id>jacoco-report-integration</id>
						<goals>
							<goal>report-integration</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.5.0</version>
				<configuration>
					<archive>
						<manifest>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>source-jar-no-fork</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
					<execution>
						<id>source-test-jar-no-fork</id>
						<goals>
							<goal>test-jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<configuration>
					<additionalOptions>-html5</additionalOptions>
				</configuration>
				<executions>
					<execution>
						<id>javadoc-jar</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<version>2.1.0</version>
				<configuration>
					<programs>
						<program>
							<id>mvnchk</id>
							<mainClass>com.github.alexisjehan.mvncheck.Application</mainClass>
							<licenseHeaderFile>LICENSE.txt</licenseHeaderFile>
						</program>
					</programs>
					<extraJvmArguments>-Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager --enable-native-access=ALL-UNNAMED</extraJvmArguments>
					<platforms>
						<platform>unix</platform>
						<platform>windows</platform>
					</platforms>
					<binFileExtensions>
						<windows>.cmd</windows>
					</binFileExtensions>
					<configurationDirectory>conf</configurationDirectory>
					<configurationSourceDirectory>src/main/resources</configurationSourceDirectory>
					<copyConfigurationDirectory>true</copyConfigurationDirectory>
					<repositoryName>lib</repositoryName>
					<repositoryLayout>flat</repositoryLayout>
					<useWildcardClassPath>true</useWildcardClassPath>
				</configuration>
				<executions>
					<execution>
						<id>appassembler-assemble</id>
						<goals>
							<goal>assemble</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<outputTimestamp>${maven.build.timestamp}</outputTimestamp>
				</configuration>
				<executions>
					<execution>
						<id>assembly-single-bin</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<descriptors>
								<descriptor>src/main/assembly/bin.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
					<execution>
						<id>assembly-single-bin-jar</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<archive>
								<manifest>
									<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
									<mainClass>com.github.alexisjehan.mvncheck.Application</mainClass>
								</manifest>
								<manifestEntries>
									<Multi-Release>true</Multi-Release>
								</manifestEntries>
							</archive>
							<descriptors>
								<descriptor>src/main/assembly/bin-jar.xml</descriptor>
							</descriptors>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>5.0.0</version>
				<configuration>
					<licenseSets>
						<licenseSet>
							<header>LICENSE.txt</header>
							<includes>
								<includes>src/**/*.java</includes>
							</includes>
						</licenseSet>
					</licenseSets>
					<mapping>
						<java>SLASHSTAR_STYLE</java>
					</mapping>
				</configuration>
				<executions>
					<execution>
						<id>license-check</id>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>3.28.0</version>
				<configuration>
					<excludeFromFailureFile>${project.basedir}/exclude-pmd.properties</excludeFromFailureFile>
					<linkXRef>false</linkXRef>
					<includeTests>true</includeTests>
					<verbose>true</verbose>
				</configuration>
				<executions>
					<execution>
						<id>pmd-check</id>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-core</artifactId>
						<version>7.19.0</version>
					</dependency>
					<dependency>
						<groupId>net.sourceforge.pmd</groupId>
						<artifactId>pmd-java</artifactId>
						<version>7.19.0</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.8</version>
				<executions>
					<execution>
						<id>gpg-sign</id>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>